jsb-compiler/src/js/generated/JSBParser.js
// Generated from C:/Users/julie/WebstormProjects/jsb/jsb-compiler/src/g4/JSBParser.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import JSBParserListener from './JSBParserListener.js';
import JSBParserVisitor from './JSBParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class JSBParser extends antlr4.Parser {

    static grammarFileName = "JSBParser.g4";
    static literalNames = [ null, null, null, null, "'<'", "'{{'", "'>'", 
                            "'/>'", "'='", "'/'", null, null, null, null, 
                            null, "'}}'", "'('", "')'", "','" ];
    static symbolicNames = [ null, "WS", "TEXT", "ID", "TAG_OPEN", "VAR_OPEN", 
                             "TAG_CLOSE", "TAG_SLASH_CLOSE", "ATTRIBUTE_EQUALS", 
                             "TAG_SLASH", "TAG_WS", "TAG_NAME", "ATTRIBUTE_VALUE", 
                             "ATTRIBUTE_VAR_OPEN", "VAR_NAME", "VAR_CLOSE", 
                             "LPAREN", "RPAREN", "COMMA", "VAR_WS" ];
    static ruleNames = [ "document", "element", "content", "elementAttribute", 
                         "elementInsert", "elementInsertContent", "varFunction", 
                         "functionArgs", "expression" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = JSBParser.ruleNames;
        this.literalNames = JSBParser.literalNames;
        this.symbolicNames = JSBParser.symbolicNames;
    }



	document() {
	    let localctx = new DocumentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, JSBParser.RULE_document);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 21;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 18;
	            this.element();
	            this.state = 23;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	element() {
	    let localctx = new ElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, JSBParser.RULE_element);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 24;
	        this.match(JSBParser.TAG_OPEN);
	        this.state = 25;
	        this.match(JSBParser.TAG_NAME);
	        this.state = 29;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===11) {
	            this.state = 26;
	            this.elementAttribute();
	            this.state = 31;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 40;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 6:
	            this.state = 32;
	            this.match(JSBParser.TAG_CLOSE);
	            this.state = 33;
	            this.content();
	            this.state = 34;
	            this.match(JSBParser.TAG_OPEN);
	            this.state = 35;
	            this.match(JSBParser.TAG_SLASH);
	            this.state = 36;
	            this.match(JSBParser.TAG_NAME);
	            this.state = 37;
	            this.match(JSBParser.TAG_CLOSE);
	            break;
	        case 7:
	            this.state = 39;
	            this.match(JSBParser.TAG_SLASH_CLOSE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	content() {
	    let localctx = new ContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, JSBParser.RULE_content);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 45;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case 4:
	                    this.state = 42;
	                    this.element();
	                    break;
	                case 2:
	                    this.state = 43;
	                    this.match(JSBParser.TEXT);
	                    break;
	                case 5:
	                case 13:
	                    this.state = 44;
	                    this.elementInsert();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 49;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elementAttribute() {
	    let localctx = new ElementAttributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, JSBParser.RULE_elementAttribute);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        this.match(JSBParser.TAG_NAME);
	        this.state = 51;
	        this.match(JSBParser.ATTRIBUTE_EQUALS);
	        this.state = 54;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 12:
	            this.state = 52;
	            this.match(JSBParser.ATTRIBUTE_VALUE);
	            break;
	        case 5:
	        case 13:
	            this.state = 53;
	            this.elementInsert();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elementInsert() {
	    let localctx = new ElementInsertContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, JSBParser.RULE_elementInsert);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        _la = this._input.LA(1);
	        if(!(_la===5 || _la===13)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 57;
	        this.elementInsertContent();
	        this.state = 58;
	        this.match(JSBParser.VAR_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elementInsertContent() {
	    let localctx = new ElementInsertContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, JSBParser.RULE_elementInsertContent);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 64;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===14) {
	            this.state = 62;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 60;
	                this.varFunction();
	                break;

	            case 2:
	                this.state = 61;
	                this.match(JSBParser.VAR_NAME);
	                break;

	            }
	            this.state = 66;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varFunction() {
	    let localctx = new VarFunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, JSBParser.RULE_varFunction);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.match(JSBParser.VAR_NAME);
	        this.state = 68;
	        this.match(JSBParser.LPAREN);
	        this.state = 70;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===14) {
	            this.state = 69;
	            this.functionArgs();
	        }

	        this.state = 72;
	        this.match(JSBParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionArgs() {
	    let localctx = new FunctionArgsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, JSBParser.RULE_functionArgs);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.expression();
	        this.state = 79;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 75;
	            this.match(JSBParser.COMMA);
	            this.state = 76;
	            this.expression();
	            this.state = 81;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression() {
	    let localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, JSBParser.RULE_expression);
	    try {
	        this.state = 84;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 82;
	            this.match(JSBParser.VAR_NAME);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 83;
	            this.varFunction();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

JSBParser.EOF = antlr4.Token.EOF;
JSBParser.WS = 1;
JSBParser.TEXT = 2;
JSBParser.ID = 3;
JSBParser.TAG_OPEN = 4;
JSBParser.VAR_OPEN = 5;
JSBParser.TAG_CLOSE = 6;
JSBParser.TAG_SLASH_CLOSE = 7;
JSBParser.ATTRIBUTE_EQUALS = 8;
JSBParser.TAG_SLASH = 9;
JSBParser.TAG_WS = 10;
JSBParser.TAG_NAME = 11;
JSBParser.ATTRIBUTE_VALUE = 12;
JSBParser.ATTRIBUTE_VAR_OPEN = 13;
JSBParser.VAR_NAME = 14;
JSBParser.VAR_CLOSE = 15;
JSBParser.LPAREN = 16;
JSBParser.RPAREN = 17;
JSBParser.COMMA = 18;
JSBParser.VAR_WS = 19;

JSBParser.RULE_document = 0;
JSBParser.RULE_element = 1;
JSBParser.RULE_content = 2;
JSBParser.RULE_elementAttribute = 3;
JSBParser.RULE_elementInsert = 4;
JSBParser.RULE_elementInsertContent = 5;
JSBParser.RULE_varFunction = 6;
JSBParser.RULE_functionArgs = 7;
JSBParser.RULE_expression = 8;

class DocumentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_document;
    }

	element = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ElementContext);
	    } else {
	        return this.getTypedRuleContext(ElementContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterDocument(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitDocument(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitDocument(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ElementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_element;
    }

	TAG_OPEN = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(JSBParser.TAG_OPEN);
	    } else {
	        return this.getToken(JSBParser.TAG_OPEN, i);
	    }
	};


	TAG_NAME = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(JSBParser.TAG_NAME);
	    } else {
	        return this.getToken(JSBParser.TAG_NAME, i);
	    }
	};


	TAG_CLOSE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(JSBParser.TAG_CLOSE);
	    } else {
	        return this.getToken(JSBParser.TAG_CLOSE, i);
	    }
	};


	content() {
	    return this.getTypedRuleContext(ContentContext,0);
	};

	TAG_SLASH() {
	    return this.getToken(JSBParser.TAG_SLASH, 0);
	};

	TAG_SLASH_CLOSE() {
	    return this.getToken(JSBParser.TAG_SLASH_CLOSE, 0);
	};

	elementAttribute = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ElementAttributeContext);
	    } else {
	        return this.getTypedRuleContext(ElementAttributeContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterElement(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitElement(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitElement(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ContentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_content;
    }

	element = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ElementContext);
	    } else {
	        return this.getTypedRuleContext(ElementContext,i);
	    }
	};

	TEXT = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(JSBParser.TEXT);
	    } else {
	        return this.getToken(JSBParser.TEXT, i);
	    }
	};


	elementInsert = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ElementInsertContext);
	    } else {
	        return this.getTypedRuleContext(ElementInsertContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterContent(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitContent(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitContent(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ElementAttributeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_elementAttribute;
    }

	TAG_NAME() {
	    return this.getToken(JSBParser.TAG_NAME, 0);
	};

	ATTRIBUTE_EQUALS() {
	    return this.getToken(JSBParser.ATTRIBUTE_EQUALS, 0);
	};

	ATTRIBUTE_VALUE() {
	    return this.getToken(JSBParser.ATTRIBUTE_VALUE, 0);
	};

	elementInsert() {
	    return this.getTypedRuleContext(ElementInsertContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterElementAttribute(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitElementAttribute(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitElementAttribute(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ElementInsertContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_elementInsert;
    }

	elementInsertContent() {
	    return this.getTypedRuleContext(ElementInsertContentContext,0);
	};

	VAR_CLOSE() {
	    return this.getToken(JSBParser.VAR_CLOSE, 0);
	};

	VAR_OPEN() {
	    return this.getToken(JSBParser.VAR_OPEN, 0);
	};

	ATTRIBUTE_VAR_OPEN() {
	    return this.getToken(JSBParser.ATTRIBUTE_VAR_OPEN, 0);
	};

	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterElementInsert(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitElementInsert(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitElementInsert(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ElementInsertContentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_elementInsertContent;
    }

	varFunction = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(VarFunctionContext);
	    } else {
	        return this.getTypedRuleContext(VarFunctionContext,i);
	    }
	};

	VAR_NAME = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(JSBParser.VAR_NAME);
	    } else {
	        return this.getToken(JSBParser.VAR_NAME, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterElementInsertContent(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitElementInsertContent(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitElementInsertContent(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class VarFunctionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_varFunction;
    }

	VAR_NAME() {
	    return this.getToken(JSBParser.VAR_NAME, 0);
	};

	LPAREN() {
	    return this.getToken(JSBParser.LPAREN, 0);
	};

	RPAREN() {
	    return this.getToken(JSBParser.RPAREN, 0);
	};

	functionArgs() {
	    return this.getTypedRuleContext(FunctionArgsContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterVarFunction(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitVarFunction(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitVarFunction(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FunctionArgsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_functionArgs;
    }

	expression = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExpressionContext);
	    } else {
	        return this.getTypedRuleContext(ExpressionContext,i);
	    }
	};

	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(JSBParser.COMMA);
	    } else {
	        return this.getToken(JSBParser.COMMA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterFunctionArgs(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitFunctionArgs(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitFunctionArgs(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ExpressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JSBParser.RULE_expression;
    }

	VAR_NAME() {
	    return this.getToken(JSBParser.VAR_NAME, 0);
	};

	varFunction() {
	    return this.getTypedRuleContext(VarFunctionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.enterExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JSBParserListener ) {
	        listener.exitExpression(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JSBParserVisitor ) {
	        return visitor.visitExpression(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




JSBParser.DocumentContext = DocumentContext; 
JSBParser.ElementContext = ElementContext; 
JSBParser.ContentContext = ContentContext; 
JSBParser.ElementAttributeContext = ElementAttributeContext; 
JSBParser.ElementInsertContext = ElementInsertContext; 
JSBParser.ElementInsertContentContext = ElementInsertContentContext; 
JSBParser.VarFunctionContext = VarFunctionContext; 
JSBParser.FunctionArgsContext = FunctionArgsContext; 
JSBParser.ExpressionContext = ExpressionContext; 
